kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: wanderlust
  labels:
    app: mongodb
spec:
  ports:
  - port: 82
    name: mongodb
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: wanderlust
spec:
  selector:
    matchLabels:
      app: mongodb 
  serviceName: "mongodb-svc"
  replicas: 2 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongodb:latest
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
